service-mesh/envoy/static/nginx-app-1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-app-config-1
  namespace: example
data:
  index.html: |
    App-1: Hello, I'm Ankit Kumar!
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment-1
  namespace: example
spec:
  # replicas: 2
  selector:
    matchLabels:
      app: nginx-app-pod-label-1
  template:
    metadata:
      labels:
        app: nginx-app-pod-label-1
    spec:
      containers:
        - name: nginx-app-container-1
          image: nginx:latest
          ports:
            - containerPort: 80
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx", "-s", "quit"]
          volumeMounts:
            - name: nginx-webpage-volume-1
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: "150Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "500m"
      volumes:
        - name: nginx-webpage-volume-1
          configMap:
            name: nginx-app-config-1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service-1
  namespace: example
spec:
  selector:
    app: nginx-app-pod-label-1
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
  type: ClusterIP
