service-mesh/envoy/static/nginx-app-2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-app-config-2
  namespace: example
data:
  index.html: |
    App-2: Hello, what's your good name?
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-deployment-2
  namespace: example
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: nginx-app-pod-label-2
  template:
    metadata:
      labels:
        app: nginx-app-pod-label-2
    spec:
      containers:
        - name: nginx-app-container-2
          image: nginx:latest
          ports:
            - containerPort: 80
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx", "-s", "quit"]
          volumeMounts:
            - name: nginx-webpage-volume-2
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: "150Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "500m"
      volumes:
        - name: nginx-webpage-volume-2
          configMap:
            name: nginx-app-config-2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service-2
  namespace: example
spec:
  selector:
    app: nginx-app-pod-label-2
  ports:
    - protocol: TCP
      port: 82
      targetPort: 80
  type: ClusterIP
